# helloworld-pybirthday

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: event-logger.yml
src/pybirthday/: __init__.py  __main__.py  pybirthday.py
tests/: test_pybirthday.py
